tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/gateway/wildcard_hostname/to_b/_test_context/Gateway-VirtualService.815185306.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: echo-2-88348
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - hosts:
    - '*.example.com'
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wild.example.com
  namespace: echo-2-88348
spec:
  gateways:
  - gateway
  hosts:
  - '*.example.com'
  http:
  - route:
    - destination:
        host: b.echo-2-88348.svc.cluster.local
        port:
          number: 80
